fixed a wrap issue with chip component

--- a/app/assets/stylesheets/components/chip_button.scss
+++ b/app/assets/stylesheets/components/chip_button.scss
@@ -7,6 +7,7 @@
   font-size: 15px;
   line-height: 44px;
   display: inline;
+  white-space: nowrap;
 }
 .chip-button-component-container {
   display: inline-block;
